# CodingAgentHarness

./: .gitignore  AGENT_LOG.md  Cargo.toml  Dockerfile  README.md  harness.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md
crates/harness-bin/: Cargo.toml
crates/harness-bin/src/: demos.rs  lib.rs  main.rs
crates/harness-config/: Cargo.toml
crates/harness-config/src/: config_tests.rs  lib.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: agent.rs  agent_tests.rs  error.rs  lib.rs  types.rs
crates/harness-feedback/: Cargo.toml
crates/harness-feedback/src/: feedback_tests.rs  lib.rs  validators.rs
crates/harness-guard/: Cargo.toml
crates/harness-guard/src/: guard_tests.rs  hitl.rs  lib.rs  rules.rs
crates/harness-llm/: Cargo.toml
crates/harness-llm/src/: lib.rs  mock.rs  mock_tests.rs  openai.rs  openai_tests.rs
crates/harness-memory/: Cargo.toml
crates/harness-memory/src/: lib.rs  memory_tests.rs  store.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: code_search.rs  git_op.rs  lib.rs  plugin.rs  read_file.rs  registry_tests.rs  shell_exec.rs  write_file.rs
docs/: GAPS.md  PLAN.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md
