[package]
name = "coding-agent-harness"
version = "0.1.0"
edition = "2024"
default-run = "harness"

[[bin]]
name = "harness"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
harness-core = { path = "../harness-core" }
harness-llm = { path = "../harness-llm" }
harness-tools = { path = "../harness-tools" }
harness-memory = { path = "../harness-memory" }
harness-guard = { path = "../harness-guard" }
harness-feedback = { path = "../harness-feedback" }
harness-config = { path = "../harness-config" }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
toml = "0.8"