[package]
name = "harness-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
