[package]
name = "harness-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
harness-core = { path = "../harness-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }